#4 Fixed an issue accessing channels placed behind the donation button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -385,7 +385,7 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
 
 .fetch-input-container {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .fetch-input {
@@ -393,8 +393,8 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
     background: #1e3947;
     border: 1px solid #2b5278;
     color: #ffffff;
-    padding: 6px 45px 6px 10px;
-    border-radius: 6px;
+    padding: 10px 40px 10px 15px;
+    border-radius: 25px;
     font-size: 14px;
     -webkit-app-region: no-drag;
 }
@@ -454,6 +454,7 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
 .channels-container {
     flex: 1;
     overflow-y: auto;
+    padding-bottom: 85px;
 }
 
 .channel-item {
@@ -570,7 +571,7 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
 }
 
 .message-header {
-    padding: 12px 20px;
+    padding: 10px 20px;
     background: #2b5278;
     border-bottom: 1px solid #1e3947;
     display: flex;
